Navbar: Set z-index on focus to ensure the focus style box-shadow is on top of other buttons (same as for controlgroup and listview).

--- a/css/structure/jquery.mobile.navbar.css
+++ b/css/structure/jquery.mobile.navbar.css
@@ -33,6 +33,9 @@
 	padding-bottom: .8em;
 	font-size: 12.5px;
 }
+.ui-navbar .ui-btn:focus {
+	z-index: 1;
+}
 .ui-navbar li .ui-btn-icon-top {
 	padding-top: 2.4em;
 }
